--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,14 @@ nav a:active{
 
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid  and place it in the grid. */
-.overview{
-  grid-column: 1/-1;
+.container > :first-child {
+  background-image: url('images/header.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-column: 1/span 3;
   min-height: 500px;
-  
 }
 
 
@@ -140,10 +144,55 @@ first div in the grid  and place it in the grid. */
  four rows in the grid. */
 
       /*This will be a lot of rules.... but be strategic and combine seletors*/
+      .about {
+        grid-column: 2 / span 1;
+        grid-row: 2; 
+      }
+      
+      .method {
+        grid-column: 2 / span 1; 
+        grid-row: 3;
+      }
+      
+      .clients {
+        grid-column: 2 / span 1; 
+        grid-row: 4; 
+      }
+      
+      .contact {
+        grid-column: 2 / span 1; 
+        grid-row: 5; 
+      }
+      
+      
 
 
  /* Step 8: Write the selector/rule property to style the .text-block class. */
-
+  .about-image,
+  .method-image,
+  .clients-image,
+  .contact-image {
+    grid-column: 1 / span 3; /* Cover all columns */
+    max-height: 600px; /* Maximum height of 600px */
+    overflow: hidden; /* Hide content that overflows the grid cell */
+  }
+  
+  .about-image {
+    grid-row: 2; /* Begin on the 2nd row */
+  }
+  
+  .method-image {
+    grid-row: 3; /* Begin on the 3rd row */
+  }
+  
+  .clients-image {
+    grid-row: 4; /* Begin on the 4th row */
+  }
+  
+  .contact-image {
+    grid-row: 5; /* Begin on the 5th row */
+  }
+ 
 
 /* Add your media query here */
 
