--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ nav a{
   color: white;
   font-size: 24px;
   padding: 0 100px;
-  text-align: center;
+  text-align: auto;
 }
 
 h1{
@@ -77,7 +77,6 @@ footer{
   border: 10px solid black;
   padding: 30px;
 }
-
 
 @media screen and (prefers-reduced-motion: reduce){
   html{
@@ -111,14 +110,21 @@ nav a:active{
 }
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
-
+.skip a{
+  position: absolute;
+  top: -40px;
+}
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
-
+.skip a:focus{
+  top: 20px;
+}
 
 /* Step 3: Write selector/rule property to style all elements when in focus*/
-
-
+:focus {
+  outline: none; 
+  border: 2px solid #000; 
+}
 
 /* Step 4: Write selector/rule property to style the container */
 .container{
@@ -135,7 +141,7 @@ first div in the grid  and place it in the grid. */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  grid-column: 1/span 3;
+  grid-column: 1 / span 3;
   min-height: 500px;
 }
 
@@ -172,37 +178,58 @@ first div in the grid  and place it in the grid. */
   .method-image,
   .clients-image,
   .contact-image {
-    grid-column: 1 / span 3; /* Cover all columns */
-    max-height: 600px; /* Maximum height of 600px */
-    overflow: hidden; /* Hide content that overflows the grid cell */
+    grid-column: 1 / span 3;
+    max-height: 600px;
+    overflow: hidden; 
   }
   
   .about-image {
-    grid-row: 2; /* Begin on the 2nd row */
+    grid-row: 2;
   }
   
   .method-image {
-    grid-row: 3; /* Begin on the 3rd row */
+    grid-row: 3; 
   }
   
   .clients-image {
-    grid-row: 4; /* Begin on the 4th row */
+    grid-row: 4; 
   }
   
   .contact-image {
-    grid-row: 5; /* Begin on the 5th row */
+    grid-row: 5;
   }
  
 
-/* Add your media query here */
-
-
+@media screen and (min-width: 800px){
   /* Step 9: Write the selector/rule property to style the nav element */
+  nav {
+    right: 0;
+    top: 30px;
+    bottom: 30px;
+    padding: 30px 0;
+    text-align: right;
+  }
 
- 
+
   /* Step 10: Write the selector/rule property to update the .container class */
-
+  .container {
+    display: grid;
+    grid-template-columns: 50px auto 500px auto 50px;
+    gap: 15px;
+  }
 
   /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
+  .about,
+  .clients,
+  .method-image,
+  .contact-image {
+    grid-column: 3 / span 2;
+  }
 
-
+  .method,
+  .contact,
+  .about-image,
+  .clients-image {
+    grid-column: 2 / span 2;
+  }
+}
